# MTCNN-light

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp  mtcnn.cpp  mtcnn.h  network.cpp  network.h  pBox.cpp  pBox.h
src/apps/mtcnn-camera/: CMakeLists.txt  main.cpp
src/apps/mtcnn-image/: CMakeLists.txt  main.cpp
src/libs/mtcnn/: CMakeLists.txt  mtcnn.cpp  mtcnn.h  network.cpp  network.h  pBox.cpp  pBox.h
